add hilton link, enable buttons, add contact us button, rearrange gallery a bit

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -94,11 +94,12 @@
             <a href="../img/other/us.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/thumbs/us-600.png" alt=""/>
             </a>
-            <a href="../img/other/babies-2.jpg" data-fancybox="gallery" data-caption="">
-                <img class="img-fluid" src="../img/thumbs/babies-2-600.png" alt=""/>
+
+            <a href="../img/proposal.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/proposal-600.png" alt=""/>
             </a>
-            <a href="../img/other/sleeping.jpg" data-fancybox="gallery" data-caption="">
-                <img class="img-fluid" src="../img/thumbs/sleeping-600.png" alt=""/>
+            <a href="../img/other/dead-dog.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/dead-dog-600.png" alt=""/>
             </a>
             <a href="../img/extra/us-boat.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/thumbs/us-boat-600.png" alt=""/>
@@ -109,8 +110,8 @@
             <a href="../img/extra/jax-sunglasses.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/thumbs/jax-sunglasses-600.png" alt=""/>
             </a>
-            <a href="../img/extra/first-photo.jpg" data-fancybox="gallery" data-caption="">
-                <img class="img-fluid" src="../img/thumbs/first-photo-600.png" alt=""/>
+            <a href="../img/extra/beach.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/beach-600.png" alt=""/>
             </a>
         </div>
         <div class="col-md-4">
@@ -155,8 +156,8 @@
             <a href="../img/other/babies.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/other/babies.jpg" alt=""/>
             </a>
-            <a href="../img/other/dead-dog.jpg" data-fancybox="gallery" data-caption="">
-                <img class="img-fluid" src="../img/thumbs/dead-dog-600.png" alt=""/>
+            <a href="../img/other/sleeping.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/sleeping-600.png" alt=""/>
             </a>
             <a href="../img/extra/three-of-us.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/thumbs/three-of-us-600.png" alt=""/>
@@ -167,12 +168,16 @@
             <a href="../img/extra/koozies.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/thumbs/koozies-600.png" alt=""/>
             </a>
-            <a href="../img/extra/beach.jpg" data-fancybox="gallery" data-caption="">
-                <img class="img-fluid" src="../img/thumbs/beach-600.png" alt=""/>
+
+            <a href="../img/extra/first-photo.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/first-photo-600.png" alt=""/>
             </a>
-            <a href="../img/extra/at-p-and-l.jpg" data-fancybox="gallery" data-caption="">
+            <a href="../img/other/babies-2.jpg" data-fancybox="gallery" data-caption="">
+                <img class="img-fluid" src="../img/thumbs/babies-2-600.png" alt=""/>
+            </a>
+           <!-- <a href="../img/extra/at-p-and-l.jpg" data-fancybox="gallery" data-caption="">
                 <img class="img-fluid" src="../img/thumbs/at-p-and-l-600.png" alt=""/>
-            </a>
+            </a>-->
         </div>
     </div>
 
@@ -287,13 +292,13 @@
 </div>
 
 <nav class="navbar navbar-dark bg-dark justify-content-center">
-    <h5 class="navbar-text text-white">
+    <p class="navbar-text text-white">
         <small>Made by</small>
         MacGregor Thompson
         <small class="arial">
             (obviously <i class="fas fa-smile"></i>)
         </small>
-    </h5>
+    </p>
 </nav>
 
 
