--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+
+<a href="mailto:kristinandmacgregor@gmail.com" class="btn btn-lg btn-danger contact-us hidden-xs">
+    Contact Us!
+</a>
+
 <div class="alert alert-danger alert-dismissible fade show text-center arial page-alert" role="alert">
     <strong>
         <i class="fas fa-exclamation-triangle"></i>
@@ -139,6 +144,7 @@
         <h1 class="text-center display-4 risque main-header" id="event-details">Event Details</h1>
         <hr>
 
+        <!-- Ceremony & Reception Section -->
         <div class="section text-center">
             <h1 class="text-danger">Ceremony & Reception</h1>
             <h4>
@@ -182,6 +188,7 @@
 
         <hr>
 
+        <!-- Transportation Section -->
         <div class="=section text-center">
             <h1 id="accommodations" class="text-danger">Accommodations</h1>
             <h4>Be sure to request our room block!</h4>
@@ -197,7 +204,7 @@
                                 Portsmouth, NH 03801
                             </address>
                             <a href="//www.starwoodmeeting.com/events/start.action?id=1801116117&key=29C3C162"
-                               class="btn btn-danger disabled" disabled>
+                               class="btn btn-danger">
                                 <i class="fas fa-paper-plane"></i>
                                 Book a Room
                             </a>
@@ -219,7 +226,8 @@
                                 100 High Street
                                 Portsmouth, NH 03801
                             </address>
-                            <a href="#" class="btn btn-danger disabled" disabled>
+                            <a href="//hiltongardeninn.hilton.com/en/gi/groups/personalized/M/MHTPDGI-PTW-20180831/index.jhtml?WT.mc_id=POG"
+                               class="btn btn-danger">
                                 <i class="fas fa-paper-plane"></i>
                                 Book a Room
                             </a>
@@ -248,7 +256,7 @@
                     </h3>
                     <h5 class="text-center">
                         <strong class="text-center">
-                            *** Pickup at the Sheraton Hotel ***
+                            *** Pickup location TBD ***
                         </strong>
                     </h5>
                     <h5>
@@ -266,16 +274,27 @@
                     <h5>
                         Buses will shuttle people back to downtown Portsmouth!
                     </h5>
+                    <div class="alert alert-info text-center" role="alert">
+                        <i class="fas fa-info-circle"></i>
+                        Please check back here every once in a while in case any information (such as bus schedules
+                        or pick-up locations) changes.
+                    </div>
+
                 </div>
                 <div class="col-md-5">
                     <img src="img/event/trolley.jpg" class="img-thumbnail">
                 </div>
             </div>
 
-            <div class="alert alert-info text-center top-space-15" role="alert">
-                <i class="fas fa-info-circle"></i>
-                Check back here every once in a while in case any information such as bus schedules
-                or pick-up locations changes.
+
+            <div class="alert alert-success text-center arial top-space-15" role="alert">
+                <h5>
+                    <i class="fas fa-envelope"></i>
+                    Please feel free to contact us for any reason. If you know that you can't make it to the wedding,
+                    want some travel information, or just have questions about Portsmouth, email us at
+                    <a href="mailto:kristinandmacgregor@gmail.com" class="arial">
+                        kristinandmacgregor@gmail.com</a>.
+                </h5>
             </div>
 
             <hr>
@@ -315,13 +334,19 @@
 </div>
 
 <nav class="navbar navbar-dark bg-dark justify-content-center">
-    <h5 class="navbar-text text-white">
+
+    <a href="mailto:kristinandmacgregor@gmail.com"
+       class="btn btn-danger navbar-brand hidden-xl hidden-lg hidden-md hidden-sm">
+        Contact Us!
+    </a>
+
+    <p class="navbar-text text-white">
         <small>Made by</small>
         MacGregor Thompson
         <small class="arial">
             (obviously <i class="fas fa-smile"></i>)
         </small>
-    </h5>
+    </p>
 </nav>
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"
