--- a/registry/index.html
+++ b/registry/index.html
@@ -48,7 +48,7 @@
 
 <div class="section" id="registry-section">
     <div class="container">
-        <div class="alert alert-danger text-center" role="alert">
+        <div class="alert alert-danger text-center top-space-15" role="alert">
             <h1 class="alert-heading">
                 <i class="fas fa-frown"></i>
                 Oops...
@@ -83,13 +83,13 @@
 </div>
 
 <nav class="navbar fixed-bottom navbar-dark bg-dark justify-content-center">
-    <h5 class="navbar-text text-white">
+    <p class="navbar-text text-white">
         <small>Made by</small>
         MacGregor Thompson
         <small class="arial">
             (obviously <i class="fas fa-smile"></i>)
         </small>
-    </h5>
+    </p>
 </nav>
 
 
