shrink page headers on xs screens

--- a/registry/index.html
+++ b/registry/index.html
@@ -37,10 +37,10 @@
 <nav class="navbar navbar-dark bg-dark">
     <a href="../" class="back-link">
         <i class="fas fa-chevron-double-left"></i>
-        Go Back
+        Back
     </a>
     <div class="col text-center">
-        <h1 class="navbar-text text-white">
+        <h1 class="navbar-text text-white navbar-page-title">
             Wedding Registry
         </h1>
     </div>
@@ -79,10 +79,19 @@
         </div>
 -->
     </div>
-
 </div>
 
-<nav class="navbar fixed-bottom navbar-dark bg-dark justify-content-center">
+<a href="mailto:kristinandmacgregor@gmail.com" class="btn btn-lg btn-danger contact-us hidden-xs">
+    <i class="fas fa-envelope"></i>
+    Contact Us!
+</a>
+
+<nav class="navbar navbar-dark bg-dark justify-content-center">
+    <a href="mailto:kristinandmacgregor@gmail.com"
+       class="btn btn-danger navbar-brand hidden-xl hidden-lg hidden-md hidden-sm">
+        <i class="fas fa-envelope"></i>
+        Contact Us!
+    </a>
     <p class="navbar-text text-white">
         <small>Made by</small>
         MacGregor Thompson
