--- a/index.html
+++ b/index.html
@@ -45,12 +45,8 @@
     <link rel="stylesheet" href="css/media-queries.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-
-<a href="mailto:kristinandmacgregor@gmail.com" class="btn btn-lg btn-danger contact-us hidden-xs">
-    Contact Us!
-</a>
-
 <div class="alert alert-danger alert-dismissible fade show text-center arial page-alert" role="alert">
     <strong>
         <i class="fas fa-exclamation-triangle"></i>
@@ -333,13 +329,17 @@
     </h1>
 </div>
 
-<nav class="navbar navbar-dark bg-dark justify-content-center">
+<a href="mailto:kristinandmacgregor@gmail.com" class="btn btn-lg btn-danger contact-us hidden-xs">
+    <i class="fas fa-envelope"></i>
+    Contact Us!
+</a>
 
+<nav class="navbar navbar-dark bg-dark justify-content-center">
     <a href="mailto:kristinandmacgregor@gmail.com"
        class="btn btn-danger navbar-brand hidden-xl hidden-lg hidden-md hidden-sm">
+        <i class="fas fa-envelope"></i>
         Contact Us!
     </a>
-
     <p class="navbar-text text-white">
         <small>Made by</small>
         MacGregor Thompson
