removed the warning about the site being under construction

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 
 <body>
-<div class="alert alert-danger alert-dismissible fade show text-center arial page-alert" role="alert">
+<!--<div class="alert alert-danger alert-dismissible fade show text-center arial page-alert" role="alert">
     <strong>
         <i class="fas fa-exclamation-triangle"></i>
         WARNING!
@@ -57,7 +57,7 @@
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <i class="fas fa-times-circle"></i>
     </button>
-</div>
+</div>-->
 <div class="section first" id="first-section">
     <div class="container-fluid">
 
