disable hilton garden button

--- a/index.html
+++ b/index.html
@@ -222,8 +222,11 @@
                                 100 High Street
                                 Portsmouth, NH 03801
                             </address>
+                            <div class="alert alert-warning hotel-alert" style="padding: .25rem 1.25rem">
+                                *** Room block is currently full ***
+                            </div>
                             <a href="//hiltongardeninn.hilton.com/en/gi/groups/personalized/M/MHTPDGI-PTW-20180831/index.jhtml?WT.mc_id=POG"
-                               class="btn btn-danger">
+                               class="btn btn-danger disabled" aria-disabled="true" tabindex="-1">
                                 <i class="fas fa-paper-plane"></i>
                                 Book a Room
                             </a>
