edits lauri suggested

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </h3>
             <nav class="nav justify-content-center top-nav">
                 <a href="#" class="nav-link scroll-to-section event-details" data-section="event-details">
-                    Event Details
+                    Wedding Details
                 </a>
                 <a href="#" class="nav-link scroll-to-section accommodations" data-section="accommodations">
                     Accommodations
@@ -84,7 +84,7 @@
             <div class="col">
                 <nav class="nav justify-content-center top-nav">
                     <a href="#" class="nav-link scroll-to-section event-details" data-section="event-details">
-                        Event Details
+                        Wedding Details
                     </a>
                     <a href="#" class="nav-link scroll-to-section accommodations" data-section="accommodations">
                         Accommodations
@@ -137,7 +137,9 @@
 
 <div class="section fourth" id="fourth-section">
     <div class="container">
-        <h1 class="text-center display-4 risque main-header" id="event-details">Event Details</h1>
+        <h1 class="text-center display-4 risque main-header" id="event-details">
+            Our Wedding Day Details
+        </h1>
         <hr>
 
         <!-- Ceremony & Reception Section -->
@@ -188,6 +190,12 @@
         <div class="=section text-center">
             <h1 id="accommodations" class="text-danger">Accommodations</h1>
             <h4>Be sure to request our room block!</h4>
+            <div class="alert alert-danger text-center arial top-space-15" role="alert">
+                <h5>
+                    <i class="fas fa-exclamation-triangle"></i>
+                    Due to peak season, please book your rooms as soon as possible!
+                </h5>
+            </div>
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-10">
                     <div class="card bg-dark text-white">
@@ -239,7 +247,49 @@
                     </div>
                 </div>
             </div>
+
+            <h4 class="top-space-15 bottom-space-15">
+                Other hotels in there area....there are plenty!
+            </h4>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="list-group list-group-flush">
+                        <a href="https://www.ihg.com/holidayinn/hotels/us/en/portsmouth/psmnh/hoteldetail?cm_mmc=GoogleMaps-_-hi-_-USEN-_-psmnh"
+                           class="list-group-item list-group-item-action text-primary">
+                            <i class="fas fa-building"></i>
+                            Holiday Inn
+                        </a>
+                        <a href="https://www.bestwestern.com/en_US/book/hotel-rooms.30023.html?iata=00171880&ssob=BLBWI0004G&cid=BLBWI0004G:google:gmb:30023"
+                           class="list-group-item list-group-item-action text-primary">
+                            <i class="fas fa-building"></i>
+                            Best Western Plus
+                        </a>
+                        <a href="http://www.anchorageinns.usotels.co/"
+                           class="list-group-item list-group-item-action text-primary">
+                            <i class="fas fa-building"></i>
+                            Anchorage Inn and Suites
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title text-danger">Let me Google that for you!</h5>
+
+                            <p class="card-text">
+                                In case you've never heard of Google, or just don't know how to use it, I would be
+                                happy to help you with that...
+                            </p>
+                            <a  href="http://lmgtfy.com/?q=hotels+portsmouth+nh" target="_blank" class="card-link">
+                                <i class="far fa-smile"></i>
+                                Click Here!
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
 
         <hr>
 
