--- a/registry/index.html
+++ b/registry/index.html
@@ -48,36 +48,12 @@
 
 <div class="section" id="registry-section">
     <div class="container">
-        <div class="alert alert-danger text-center top-space-15" role="alert">
+        <div class="alert alert-primary text-center top-space-15" role="alert">
             <h1 class="alert-heading">
-                <i class="fas fa-frown"></i>
-                Oops...
+                <img class="img-fluid rounded" src="img/jax-face-small.png" alt="Jackson in a hat" style="max-height: 64px;">
+                COMING SOON!
             </h1>
-            <h3 class="arial">
-                We haven't registered anywhere yet, but when we do we'll start adding them here!
-            </h3>
         </div>
-<!--
-        <div class="jumbotron text-center">
-            <h1 class="display-4 text-danger ">
-                Oops...
-                <span class="smiley-color">
-                    <i class="fas fa-frown"></i>
-
-                </span>
-            </h1>
-            <h3>
-            </h3>
-            &lt;!&ndash;<p class="lead">
-                We haven't yet registered anywhere, but when we do we'll start adding them here!
-            </p>&ndash;&gt;
-            &lt;!&ndash;<hr class="my-4">
-            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-            <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-            </p>&ndash;&gt;
-        </div>
--->
     </div>
 </div>
 
