--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             </div>
 
             <h4 class="top-space-15 bottom-space-15">
-                Other hotels in there area....there are plenty!
+                There are PLENTY of other hotels in the area too!
             </h4>
             <div class="row">
                 <div class="col-md-6">
@@ -275,10 +275,8 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title text-danger">Let me Google that for you!</h5>
-
                             <p class="card-text">
-                                In case you've never heard of Google, or just don't know how to use it, I would be
-                                happy to help you with that...
+                                In case you've never heard of Google, or just don't know how to use it...
                             </p>
                             <a  href="http://lmgtfy.com/?q=hotels+portsmouth+nh" target="_blank" class="card-link">
                                 <i class="far fa-smile"></i>
