added stuff in about registries

--- a/registry/index.html
+++ b/registry/index.html
@@ -46,13 +46,51 @@
     </div>
 </nav>
 
-<div class="section" id="registry-section">
+<div class="section top-space-30" id="registry-section">
     <div class="container">
-        <div class="alert alert-primary text-center top-space-15" role="alert">
-            <h1 class="alert-heading">
-                <img class="img-fluid rounded" src="img/jax-face-small.png" alt="Jackson in a hat" style="max-height: 64px;">
-                COMING SOON!
-            </h1>
+        <div class="row">
+            <div class="col-lg-4 col-sm-6">
+                <div class="card bg-dark registry-card">
+                    <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_owner.jsp?registryId=545836517&eventType=Wedding&_requestid=1637030#t=myItems">
+                        <img class="card-img-top bg-white" src="img/bbb1.png" alt="Card image cap">
+                    </a>
+                    <div class="card-body text-center">
+                        <a class="btn btn-lg btn-primary" target="_blank"
+                           href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_owner.jsp?registryId=545836517&eventType=Wedding&_requestid=1637030#t=myItems">
+                            <i class="fas fa-paper-plane"></i>
+                            Go to registry
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="card bg-dark registry-card">
+                    <a href="https://www.amazon.com/wedding/macgregor-thompson-kristin-palladino-rye-september-2018/registry/3AU5HE9PE7N1R">
+                        <img class="card-img-top" src="img/amazon.jpg" alt="Card image cap">
+                    </a>
+                    <div class="card-body text-center">
+                        <a class="btn btn-lg btn-primary" target="_blank"
+                           href="https://www.amazon.com/wedding/macgregor-thompson-kristin-palladino-rye-september-2018/registry/3AU5HE9PE7N1R">
+                            <i class="fas fa-paper-plane"></i>
+                            Go to registry
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <div class="card bg-dark registry-card" style="margin-bottom: 200px;">
+                    <a href="https://designimagesaugusta.com/shop/index.php?route=giftregistry/gift/products&gift_id=93">
+                        <img class="card-img-top bg-white" src="img/design1.png" alt="Card image cap">
+                    </a>
+                    <div class="card-body text-center">
+                        <a class="btn btn-lg btn-primary" target="_blank"
+                           href="https://designimagesaugusta.com/shop/index.php?route=giftregistry/gift/products&gift_id=93">
+                            <i class="fas fa-paper-plane"></i>
+                            Go to registry
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -62,7 +100,7 @@
     Contact Us!
 </a>
 
-<nav class="navbar navbar-dark bg-dark justify-content-center">
+<nav class="navbar fixed-bottom navbar-dark bg-dark justify-content-center">
     <a href="mailto:kristinandmacgregor@gmail.com"
        class="btn btn-danger navbar-brand hidden-xl hidden-lg hidden-md hidden-sm">
         <i class="fas fa-envelope"></i>
