add charleston street registry and remove amazon registry

--- a/registry/index.html
+++ b/registry/index.html
@@ -65,12 +65,12 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <div class="card bg-dark registry-card">
-                    <a href="https://www.amazon.com/wedding/macgregor-thompson-kristin-palladino-rye-september-2018/registry/3AU5HE9PE7N1R">
-                        <img class="card-img-top" src="img/amazon.jpg" alt="Card image cap">
+                    <a href="http://charlestonstreet.com/registry.asp?action=view&id=4965">
+                        <img class="card-img-top" src="img/charleston1.png" alt="Card image cap">
                     </a>
                     <div class="card-body text-center">
                         <a class="btn btn-lg btn-primary" target="_blank"
-                           href="https://www.amazon.com/wedding/macgregor-thompson-kristin-palladino-rye-september-2018/registry/3AU5HE9PE7N1R">
+                           href="http://charlestonstreet.com/registry.asp?action=view&id=4965">
                             <i class="fas fa-paper-plane"></i>
                             Go to registry
                         </a>
