actually use the correct bb&b public url

--- a/registry/index.html
+++ b/registry/index.html
@@ -51,12 +51,12 @@
         <div class="row">
             <div class="col-lg-4 col-sm-6">
                 <div class="card bg-dark registry-card">
-                    <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_owner.jsp?registryId=545836517&eventType=Wedding&_requestid=1637030#t=myItems">
+                    <a href="https://www.bedbathandbeyond.com:443/store/giftregistry/view_registry_guest.jsp?registryId=545836517&eventType=Wedding&pwsurl=">
                         <img class="card-img-top bg-white" src="img/bbb1.png" alt="Card image cap">
                     </a>
                     <div class="card-body text-center">
                         <a class="btn btn-lg btn-primary" target="_blank"
-                           href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_owner.jsp?registryId=545836517&eventType=Wedding&_requestid=1637030#t=myItems">
+                           href="https://www.bedbathandbeyond.com:443/store/giftregistry/view_registry_guest.jsp?registryId=545836517&eventType=Wedding&pwsurl=">
                             <i class="fas fa-paper-plane"></i>
                             Go to registry
                         </a>
