add bus schedule

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                             <p class="card-text">
                                 In case you've never heard of Google, or just don't know how to use it...
                             </p>
-                            <a  href="http://lmgtfy.com/?q=hotels+portsmouth+nh" target="_blank" class="card-link">
+                            <a href="http://lmgtfy.com/?q=hotels+portsmouth+nh" target="_blank" class="card-link">
                                 <i class="far fa-smile"></i>
                                 Click Here!
                             </a>
@@ -293,58 +293,164 @@
 
         <div class="section transport-section" id="transportation">
             <h1 class="text-center text-danger">Transportation for EVERYONE!</h1>
-            <div class="row">
-                <div class="col-md-7 arial">
-                    <h3 class="">
-                        <span class="badge badge-warning arial">
-                            <i class="fas fa-bus"></i> 4pm - 5pm
-                        </span>
+            <div class="alert alert-primary arial">
+                <h4 style="margin-bottom: 0; display: inline">
+                    There will be
+                    <span class="badge badge-danger">
+                        3 buses
+                    </span>
+                    available to shuttle people to and from downtown
+                    Portsmouth and the Seacoast Science Center!
+                </h4>
+            </div>
 
-                    </h3>
-                    <h5 class="text-center">
-                        <strong class="text-center">
-                            *** Pickup location TBD ***
-                        </strong>
-                    </h5>
-                    <h5>
-                        Buses (and maybe a trolley if you're cool) will be available to shuttle people from downtown
-                        Portsmouth to the Seacoast Science Center!
-                    </h5>
-
-                    <hr>
-                    <h3>
-                        <span class="badge badge-warning arial">
-                            <i class="fas fa-bus"></i>
-                            10pm - 12pm
-                        </span>
-                    </h3>
-                    <h5>
-                        Buses will shuttle people back to downtown Portsmouth!
-                    </h5>
-                    <div class="alert alert-info text-center" role="alert">
-                        <i class="fas fa-info-circle"></i>
-                        Please check back here every once in a while in case any information (such as bus schedules
-                        or pick-up locations) changes.
-                    </div>
-
+            <div class="row justify-content-center bottom-space-15">
+                <div class="col-md-2 col-sm-3">
+                    <img src="http://images.pcmac.org//images/Users/mbharaj@lawrence.k12.ny.us/bus-animation.gif"
+                         class="img-fluid">
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-6 col-xs-8 arial">
+                    <h1 class="text-center top-space-15">
+                        <span class="badge badge-primary arial">
+                            <i class="fas fa-bus"></i>
+                            Bus Schedule
+                            <i class="fas fa-bus"></i>
+                        </span>
+                    </h1>
+                </div>
+                <div class="col-md-2 col-sm-3 ">
                     <img src="img/event/trolley.jpg" class="img-thumbnail">
                 </div>
             </div>
 
+            <table class="table table-sm bus-table arial">
+                <thead>
+                <tr>
+                    <th scope="col" class="text-center"><i class="fas fa-bus"></i></th>
+                    <th scope="col" class="text-center">Pickup</th>
+                    <th scope="col" class="text-center">Destination</th>
+                    <th scope="col" class="text-center">Arrives</th>
+                    <th scope="col" class="text-center">Departs</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row" class="text-center">Bus 1</th>
+                    <td class="text-center">Sheraton Hotel</td>
+                    <td class="text-center">Seacoast Science Center</td>
+                    <td class="text-center">
+                        <h4>
+                            <span class="badge badge-success arial">
+                                4:15pm
+                            </span>
+                        </h4>
+                    </td>
+                    <td class="text-center">
+                        <h4>
+                            <span class="badge badge-warning arial">
+                                4:30pm
+                            </span>
+                        </h4>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row" class="text-center">Bus 2</th>
+                    <td class="text-center">Hilton Garden Inn</td>
+                    <td class="text-center">Seacoast Science Center</td>
+                    <td class="text-center">
+                        <h4>
+                            <span class="badge badge-success arial">
+                                4:15pm
+                            </span>
+                        </h4>
+                    </td>
+                    <td class="text-center">
+                        <h4>
+                            <span class="badge badge-warning arial">
+                                4:30pm
+                            </span>
+                        </h4>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row" class="text-center">
+                        Bus 3
+                    </th>
+                    <td class="text-center">
+                        Sheraton Hotel
+                        <br>
+                        <span class="badge badge-primary">THEN</span>
+                        <br>
+                        Hilton Garden Inn
+                    </td>
+                    <td class="text-center">Seacoast Science Center</td>
+                    <td class="text-center">
+                        <h4>
+                            <span class="badge badge-success arial">
+                                4:30pm
+                            </span>
+                        </h4>
+                    </td>
+                    <td class="text-center">
+                        <h4>
+                            <span class="badge badge-danger arial">
+                                4:45pm
+                                <br>
+                                <small>(last bus)</small>
+                            </span>
+                        </h4>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row" class="text-center">Bus 1</th>
+                    <td class="text-center">
+                        Seacoast Science Center
+                    </td>
+                    <td class="text-center">
+                        Sheraton Hotel & Hilton Garden Inn
+                    </td>
+                    <td class="text-center">
+                        <h4>
+                            <span class="badge badge-success arial">
+                                10:00pm
+                            </span>
+                        </h4>
+                    </td>
+                    <td class="text-center">
+                        <h4>
+                            <span class="badge badge-warning arial">
+                                10:15pm
+                            </span>
+                        </h4>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row" class="text-center">All 3 Buses</th>
+                    <td class="text-center">
+                        Seacoast Science Center
+                    </td>
+                    <td class="text-center">
+                        Sheraton Hotel &
+                        Hilton Garden Inn
+                    </td>
+                    <td class="text-center">
+                        <h4>
+                            <span class="badge badge-success arial">
+                                11:00pm
+                            </span>
+                        </h4>
+                    </td>
+                    <td class="text-center">
+                        <h4>
+                            <span class="badge badge-warning arial">
+                                11:15pm
+                            </span>
+                        </h4>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
 
-            <div class="alert alert-success text-center arial top-space-15" role="alert">
-                <h5>
-                    <i class="fas fa-envelope"></i>
-                    Please feel free to contact us for any reason. If you know that you can't make it to the wedding,
-                    want some travel information, or just have questions about Portsmouth, email us at
-                    <a href="mailto:kristinandmacgregor@gmail.com" class="arial">
-                        kristinandmacgregor@gmail.com</a>.
-                </h5>
-            </div>
-
-            <hr>
 
             <div class="alert alert-warning transport-alert" role="alert">
                 <h3 class="text-center alert-heading">
@@ -365,6 +471,21 @@
                      This is going to be one hell of a good time, so please don't drink and drive!
                  </h3>-->
             </div>
+
+
+            <hr>
+
+            <div class="alert alert-success text-center arial top-space-15" role="alert">
+                <h5>
+                    <i class="fas fa-envelope"></i>
+                    Please feel free to contact us for any reason. If you know that you can't make it to the wedding,
+                    want some travel information, or just have questions about Portsmouth, email us at
+                    <a href="mailto:kristinandmacgregor@gmail.com" class="arial">
+                        kristinandmacgregor@gmail.com</a>.
+                </h5>
+            </div>
+
+
         </div>
 
 
